--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/popper.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
@@ -130,6 +130,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "openmuseum"
 }
